--- a/web/css/style.css
+++ b/web/css/style.css
@@ -181,12 +181,19 @@ input[type="file"] {
         display: block !important;
     }
 }
-.videoWrapper {
+.video-container {
+    overflow: hidden;
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    height: 0;
+    width:100%;
 }
-.videoWrapper iframe {
+
+.video-container::after {
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+}
+
+.video-container iframe {
     position: absolute;
     top: 0;
     left: 0;
